@@ -1,3 +1,9 @@
+2009-09-16  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
+
+	* coders/jpeg.c (ReadGenericProfile,ReadICCProfile,ReadIPTCProfile):
+	Profile chunks need to be concatenated.  Otherwise "chunked"
+	profiles become corrupted.
+
 2009-09-04  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
 	* version.sh: GraphicsMagick 1.2.8 released.
